fix(expertise) collapse/expand functionality stopped working

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -386,3 +386,6 @@ footer .right-bar {
         font-size: 12px;
     }
 }
+.body.collapsed {
+    display: none;
+}
